Add next batch.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
     <ul class="profile-list">
       <li>
         <div class="profile-photo">
+          <img src="students/audra-kornicki/dad_and_me.png" alt="Audra Kornicki profile photo">
+        </div>
+        <p>
+          <a href="students/audra-kornicki/">Audra Kornicki</a>
+        </p>
+      </li>
+      <li>
+        <div class="profile-photo">
           <img src="students/brandon-liu/red-2.jpg" alt="Brandon Lui profile photo">
         </div>
         <p>
@@ -36,10 +44,58 @@
       </li>
       <li>
         <div class="profile-photo">
+          <img src="students/calvin-ting/calvin.png" alt="Calvin Ting profile photo" style="min-width: 100%; top: -10px">
+        </div>
+        <p>
+          <a href="students/calvin-ting">Calvin Ting</a>
+        </p>
+      </li>
+      <li>
+        <div class="profile-photo">
+          <img src="students/dakota-mauza/images/me.jpg" alt="Dakota Mauza profile photo">
+        </div>
+        <p>
+          <a href="students/dakota-mauza/">Dakota Mauza</a>
+        </p>
+      </li>
+      <li>
+        <div class="profile-photo">
+          <img src="students/eric-chan/!--images/!--my-pic.jpg" alt="Eric Chan profile photo">
+        </div>
+        <p>
+          <a href="students/eric-chan/">Eric Chan</a>
+        </p>
+      </li>
+      <li>
+        <div class="profile-photo">
           <img src="students/guy-chappell/image/portrait4.png" alt="Guy Chappell profile photo">
         </div>
         <p>
           <a href="students/guy-chappell/">Guy Chappell</a>
+        </p>
+      </li>
+      <li>
+        <div class="profile-photo">
+          <img src="students/paul-dudsdeemaytha/images/woods.jpg" alt="Paul Dudsdeemaytha profile photo">
+        </div>
+        <p>
+          <a href="students/paul-dudsdeemaytha/">Paul Dudsdeemaytha</a>
+        </p>
+      </li>
+      <li>
+        <div class="profile-photo">
+          <img src="students/rodrigo-samayoa/images/mountain-view.jpg" alt="Rodrigo Samayoa profile photo">
+        </div>
+        <p>
+          <a href="students/rodrigo-samayoa/">Rodrigo Samayoa</a>
+        </p>
+      </li>
+      <li>
+        <div class="profile-photo">
+          <img src="students/ryan-ku/images/portrait.jpg" alt="Ryan Ku profile photo">
+        </div>
+        <p>
+          <a href="students/ryan-ku/">Ryan Ku</a>
         </p>
       </li>
       <li>
