Add last batch.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       </li>
       <li>
         <div class="profile-photo">
+          <img src="students/auyra-lee/images/picture.jpg" alt="Auyra Lee profile photo">
+        </div>
+        <p>
+          <a href="students/auyra-lee/">Auyra Lee</a>
+        </p>
+      </li>
+      <li>
+        <div class="profile-photo">
           <img src="students/brandon-liu/red-2.jpg" alt="Brandon Lui profile photo">
         </div>
         <p>
@@ -52,10 +60,26 @@
       </li>
       <li>
         <div class="profile-photo">
+          <img src="students/cliff-chan/Images/IMG_0104.jpg" alt="Cliff Chan profile photo">
+        </div>
+        <p>
+          <a href="students/cliff-chan/">Cliff Chan</a>
+        </p>
+      </li>
+      <li>
+        <div class="profile-photo">
           <img src="students/dakota-mauza/images/me.jpg" alt="Dakota Mauza profile photo">
         </div>
         <p>
           <a href="students/dakota-mauza/">Dakota Mauza</a>
+        </p>
+      </li>
+      <li>
+        <div class="profile-photo">
+          <img src="students/david-yin/images/face.png" alt="David Yin profile photo">
+        </div>
+        <p>
+          <a href="students/david-yin/">David Yin</a>
         </p>
       </li>
       <li>
@@ -68,10 +92,18 @@
       </li>
       <li>
         <div class="profile-photo">
-          <img src="students/guy-chappell/image/portrait4.png" alt="Guy Chappell profile photo">
+          <img src="students/guy-chappell/image/portrait4.png" `alt="Guy Chappell profile photo">
         </div>
         <p>
           <a href="students/guy-chappell/">Guy Chappell</a>
+        </p>
+      </li>
+      <li>
+        <div class="profile-photo">
+          <img src="students/ning-luo/photos/NING.png" alt="Ning Luo profile photo">
+        </div>
+        <p>
+          <a href="students/ning-luo/">Ning Luo</a>
         </p>
       </li>
       <li>
