--- a/students/guy-chappell/index.html
+++ b/students/guy-chappell/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,600,700" rel="stylesheet">
-  <link rel="icon" type="image/png" href="/image/favicon.ico">
+  <link rel="icon" type="image/png" href="image/favicon.ico">
   <title>Guy Chappell | ABOUT</title>
 </head>
 <body>
   
   <div id="leftColumn">
     <div id="portraitWrapper">
-        <img id="portrait" class="border" src="/image/portrait4.png" alt="portrait">
+        <img id="portrait" class="border" src="image/portrait4.png" alt="portrait">
     </div>
     <div id="leftColumnInner" class="textCenter">
       <h1 id="nameText">Guy Chappell</h1>
@@ -34,19 +34,19 @@
       <p>I have developed some sites in Wordpress using my basic knowledge of HTML and CSS. Built with the QODE <a href="https://themeforest.net/item/bridge-creative-multipurpose-wordpress-theme/7315054" target="_blank">Bridge</a> theme for Wordpress.</p>
       <ul id="portfolioList">
         <li>
-          <a href="http://ethony.com/bad-bitches-tarot/" target="_blank"><img src="/image/tarot.png" alt="">
+          <a href="http://ethony.com/bad-bitches-tarot/" target="_blank"><img src="image/tarot.png" alt="">
           <p>Bad Bitches Tarot</p></a>
         </li>
         <li>
-          <a href="http://rockyourniche.com/" target="_blank"><img src="/image/RYN.png" alt="">
+          <a href="http://rockyourniche.com/" target="_blank"><img src="image/RYN.png" alt="">
           <p>Rock Your Niche</p></a>
         </li>
         <li>
-          <a href="http://glassworksrefinishing.ca/" target="_blank"><img src="/image/glassworks.png" alt="">
+          <a href="http://glassworksrefinishing.ca/" target="_blank"><img src="image/glassworks.png" alt="">
           <p>Glassworks Refinishing</p></a>
         </li>
         <li>
-          <a href="http://radiusod.com/" target="_blank"><img src="/image/radius.png" alt="">
+          <a href="http://radiusod.com/" target="_blank"><img src="image/radius.png" alt="">
           <p>Radius OD</p></a>
         </li>
       </ul>
